Edge:
* Use PostgreSQL's array_agg function if it exists, instead of array_accum (PG v8.4 or newer).
* Shuffle multiple Sphinx addresses by default, but allow that to be turned off (Ngan Pham).
* Fix string attributes when using Sphinx 2.0.1 and bin_path.

1.4.7 - August 28th 2011
* Don't search for objects when updating attributes on every save - if the object isn't there, then the error will be caught anyway.
* Extra flexibility for association attribute references (Andrew White).
* Setting up test suite for Travis, and fixing tests across many rubies.
* Removing test for filtering on wordcount attribute - seems Sphinx doesn't like that.
* If many indices are searched on, only use the first for excerpts.
* Allow MVA facets from SQL strings that are all integers to skip object translation.
* Adding total_count method for better Kaminari support (Dan Pickett).
* Switching from Jeweler to Bundler for gem management.
* Cleaning up Context - re-using camelized class names.
* Simplified auto-star regex for 1.9 - no need to set the unicode flag.
* Don't update sphinx_internal_id attribute when updating a record's attributes.
* Ignore empty arrays for :without_ids (Jason Rust).
* Now catching Riddle::ResponseError when we aren't fussed about the responses from Sphinx.
* Distinguishing between Ruby 1.8 and 1.9 for auto-star regex (Andrew White).
* Don't re-index at the end of suspended_delta calls if requested.
* Adding stop_timeout setting to configure how long ts:stop should wait while checking whether Sphinx has stopped (Justin Tanner).
* Speed improvement for types_to_crcs (Josh Goebel).
* Adding a touched_reindex_file option, for a file that will be touched after indices are rotated (Rémi Prévost).
* Better support for the Mysql2 adapter (Andrew White).
* More pagination methods - next_page? and first_page?.
* Adding use_64_bit option to ensure all timestamp attributes are treated as 64 bit integers (Andrey Deryabin).