@@ -1,4 +1,5 @@
 Edge:
+* Bringing in builder gem's BlankSlate for our Builder - better at keeping global Rake methods out of the way.
 * Use PostgreSQL's array_agg function if it exists, instead of array_accum (PG v8.4 or newer).
 * Shuffle multiple Sphinx addresses by default, but allow that to be turned off (Ngan Pham).
 * Fix string attributes when using Sphinx 2.0.1 and bin_path.
